# trainer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  mcp_config.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-checks.yml  publish.yml
docs/: README.md  architecture.md  developers.md  installation.md  mcp-integration.md  pre-commit.md  strava-mcp.md  testing.md
examples/: README.md  basic_usage.py  strava_integration.py
src/trainer/: __init__.py  __main__.py
src/trainer/agents/: __init__.py  trainer_agent.py
src/trainer/models/: __init__.py  training_plan.py  workout.py
src/trainer/tools/: __init__.py  strava_client.py  strava_mcp.py
src/trainer/utils/: __init__.py  arguments.py  config.py  formatters.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: test_agent.py
tests/unit/: test_formatters.py  test_models.py
