[project]
name = "trainer"
version = "0.1.0"
description = "An open-source agentic AI personal trainer for fitness and health"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk~=1.15.1",
    "mcp~=1.16.0",
    "pydantic~=2.11.10",
    "python-dotenv~=1.1.1",
    "httpx~=0.28.1",
]

[project.scripts]
trainer = "trainer.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest~=8.4.2",
    "pytest-asyncio~=1.2.0",
    "pytest-cov~=7.0.0",
    "ruff~=0.14.0",
    "mypy~=1.18.2",
    "pre-commit~=4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
cache_dir = ".mypy_cache"
incremental = true

[[tool.mypy.overrides]]
module = ["google.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: integration tests requiring external services",
    "unit: unit tests that don't require external services",
]
filterwarnings = ["ignore::DeprecationWarning"]

